--- a/faq.html
+++ b/faq.html
@@ -1415,7 +1415,8 @@
       opacity: 0.2; /* Transparenz weiter reduziert */
       /* Stellt sicher, dass das Logo hinter dem neuen Inhalt ist, falls es überlappt */
       position: relative; 
-      z-index: 1; 
+      z-index: 1;
+      transform: translateY(230px); /* Logo um 150px nach unten verschoben */
     }
 
     /* Wiederverwendung der Logo-Struktur, aber mit eigenen Klassen für die Größe */
