--- a/impressum.html
+++ b/impressum.html
@@ -49,7 +49,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9; /* Heller Hintergrund für den Inhalt */
+      background-color: #6e370e; /* Hintergrund auf reines Weiß geändert */
       font-smooth: always;
       padding-top: 93px; /* Platz für die fixe Navigation */
     }
@@ -58,7 +58,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: rgba(230, 230, 230, 0.15); /* #e6e6e6 mit 0.5 Transparenz (weniger transparent) */
+      background-color: rgba(230, 230, 230, 1); /* #e6e6e6 mit 0.5 Transparenz (weniger transparent) */
       border-bottom: 1px solid #c8c5c5; /* Linienfarbe geändert */
       padding: 0 25px; /* Padding links/rechts, vertikales Padding wird durch Höhe und align-items gesteuert */
       position: fixed;
