--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     .main-nav {
       display: flex;
       justify-content: space-between;
-      align-items: center; 
-      background-color: rgba(230, 230, 230, 0.15); /* #e6e6e6 mit 0.5 Transparenz (weniger transparent) */
+      align-items: center;
+      background-color: #f9f9f9; /* Hintergrundfarbe auf hellgrau geändert */
       border-bottom: 1px solid #c8c5c5; /* Linienfarbe geändert */
       padding: 0 25px; /* Padding links/rechts, vertikales Padding wird durch Höhe und align-items gesteuert */
       position: fixed;
