--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9; /* Heller Hintergrund für den Inhalt */
+      background-color: #6e370e; /* Heller Hintergrund für den Inhalt */
       font-smooth: always;
       /* padding-top: 93px; */ /* Entfernt, damit Hero-Section oben beginnt */
     }
@@ -53,8 +53,8 @@
     .main-nav {
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      background-color: #f9f9f9; /* Hintergrundfarbe auf hellgrau geändert */
+      align-items: center; 
+      background-color: rgba(230, 230, 230, 0.15); /* #e6e6e6 mit 0.5 Transparenz (weniger transparent) */
       border-bottom: 1px solid #c8c5c5; /* Linienfarbe geändert */
       padding: 0 25px; /* Padding links/rechts, vertikales Padding wird durch Höhe und align-items gesteuert */
       position: fixed;
