--- a/impressum.html
+++ b/impressum.html
@@ -76,6 +76,8 @@
     .main-nav.strong-blur {
       backdrop-filter: blur(16px); /* Noch stärkerer Unschärfeeffekt */
       -webkit-backdrop-filter: blur(16px);
+      background-color: rgba(230, 230, 230, 0.15); /* Hintergrundtransparenz auf 0.15 setzen */
+
     }
 
     /* Logo Stile für das Menü */
