--- a/leistungen.html
+++ b/leistungen.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <title>Leistungen - BAZARA safia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Hausarztpraxis Bazara" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
+
   <!-- Google Fonts Einbindung -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300;500;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   
