--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #6e370e; /* Heller Hintergrund für den Inhalt */
+      background-color: #000; /* Heller Hintergrund für den Inhalt */
       font-smooth: always;
       /* padding-top: 93px; */ /* Entfernt, damit Hero-Section oben beginnt */
     }
@@ -1856,7 +1856,7 @@
     </div>
   </nav>
 
-  <div class="hero-section">
+  <main class="hero-section">
     <div class="hero-background"></div> <!-- Neuer Container für das Hintergrundbild -->
     <div class="hero-text-wrapper">
       <h1>
@@ -1867,8 +1867,9 @@
       </h1>
       <h2>Wir begleiten Sie – persönlich, nah und mit Zeit.</h2>
     </div>
-  </div>
-  <div class="info-section">
+  </main>
+
+  <section class="info-section">
     <div class="left-column">
       <span class="bullet-point">&bull;</span>
       <span class="practice-name">Hausarztpraxis Bazara</span>
@@ -1876,9 +1877,9 @@
     <div class="right-column">
       <p class="welcome-text">Herzlich willkommen in unserer Praxis. Wir nehmen uns Zeit für Ihre Gesundheit – mit Erfahrung, Empathie und einem verlässlichen Team.</p>
     </div>
-  </div>
+  </section>
 
-  <div class="leistungen-section">
+  <section class="leistungen-section">
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
       <h3 class="sub-heading">So unterstützen wir Ihre Gesundheit</h3>
@@ -1924,9 +1925,9 @@
     <div class="leistungen-button-container">
       <a href="/leistungen" class="leistungen-button">Alle Leistungen <span class="arrow">&#10140;</span></a>
     </div>
-  </div>
+  </section>
 
-  <div class="sprechzeiten-section">
+  <section class="sprechzeiten-section">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -1974,9 +1975,9 @@
     <p class="sprechzeiten-hinweis">
       Bitte beachten Sie die Urlaubszeiten und Feiertage.
     </p>
-  </div>
+  </section>
 
-  <div class="lage-anfahrt-section">
+  <section class="lage-anfahrt-section">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -2011,9 +2012,9 @@
         <div class="right-col">gute Parkmöglichkeiten</div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="werte-section">
+  <section class="werte-section">
     <div class="section-divider"></div>
     <div class="werte-content-layout">
       <div class="werte-sticky-titles">
@@ -2084,7 +2085,7 @@
         -->
       </div>
     </div>
-  </div>
+  </section>
   <footer class="main-footer">
     <div class="footer-top-left-content">
       <div class="footer-new-title">Ihre Gesundheit.<br>Unser Auftrag.</div>
