--- a/leistungen.html
+++ b/leistungen.html
@@ -2046,7 +2046,7 @@
     </div>
   </nav>
 
-  <div class="hero-section">
+  <main class="hero-section">
     <div class="hero-background"></div> 
     <div class="hero-text-wrapper">
       <h1>
@@ -2055,9 +2055,9 @@
       </h1>
       <h2>Diagnostik, Behandlung und Vorsorge – alles in Ihrer Hausarztpraxis.</h2>
     </div>
-  </div>
+  </main>
 
-  <div class="info-section">
+  <section class="info-section">
     <div class="left-column">
       <span class="bullet-point">&bull;</span>
       <span class="practice-name">Unser Spektrum</span>
@@ -2065,9 +2065,9 @@
     <div class="right-column">
       <p class="welcome-text">Unsere hausärztlichen Leistungen verbinden Erfahrung mit persönlicher Betreuung – für akute Hilfe, langfristige Begleitung und wirksame Vorsorge.</p>
     </div>
-  </div>
+  </section>
 
-  <div class="leistungen-section" id="akute-behandlung"> <!-- Beginn der kopierten Sektion -->
+  <section class="leistungen-section" id="akute-behandlung"> <!-- Beginn der kopierten Sektion -->
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
       <h3 class="sub-heading">Wenn schnelle Hilfe zählt</h3>
@@ -2113,9 +2113,9 @@
       </div>
     </div>
     <!-- Anderer Inhalt der .leistungen-section kann hier folgen -->
-  </div>
+  </section>
 
-  <div class="sprechzeiten-section" id="moderne-diagnostik">
+  <section class="sprechzeiten-section" id="moderne-diagnostik">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -2173,9 +2173,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="leistungen-section" id="chronische-betreuung"> <!-- Wiederverwendung der Klasse für konsistentes Styling, ggf. anpassen -->
+  <section class="leistungen-section" id="chronische-betreuung"> <!-- Wiederverwendung der Klasse für konsistentes Styling, ggf. anpassen -->
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -2243,9 +2243,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="leistungen-section" id="vorsorge-impfschutz">
+  <section class="leistungen-section" id="vorsorge-impfschutz">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -2279,9 +2279,9 @@
       </div>
     </div>
 
-  </div>
+  </section>
 
-  <div class="leistungen-section persoenliche-begleitung-section">
+  <section class="leistungen-section persoenliche-begleitung-section">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -2330,7 +2330,7 @@
 
       <div class="slide-dots"></div>
     </div>
-  </div>
+  </section>
 
 
 
