--- a/faq.html
+++ b/faq.html
@@ -1600,7 +1600,7 @@
     </div>
   </nav>
 
-  <div class="hero-section">
+  <main class="hero-section">
     <div class="hero-background"></div> 
     <div class="hero-text-wrapper">
       <h1>
@@ -1609,9 +1609,9 @@
       </h1>
       <h2>Was Sie rund um unsere Praxis, Abläufe und Leistungen wissen<br>möchten – klar erklärt und gut verständlich.</h2>
     </div>
-  </div>
+  </main>
 
-  <div class="info-section">
+  <section class="info-section">
     <div class="left-column">
       <span class="bullet-point">&bull;</span>
       <span class="practice-name">Ihre Fragen</span>
@@ -1619,10 +1619,10 @@
     <div class="right-column">
       <p class="welcome-text">Hier beantworten wir die häufigsten Fragen rund um Ihre Behandlung, Termine und unsere Praxis – damit Sie sich bestens informiert und gut aufgehoben fühlen.</p>
     </div>
-  </div>
+  </section>
 
   <!-- FAQ-Inhalt mit dem Titel der Leistungs-Sektion -->
-  <div class="leistungen-section">
+  <section class="leistungen-section">
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
       <!-- Der Sub-Heading Text kann hier angepasst werden für FAQ -->
@@ -1652,9 +1652,9 @@
     <!-- <div class="leistungen-section" style="margin-top: 50px; background: white; padding: 20px; height: 300px;">
       <h2>Test Sektion für Menü Farbwechsel</h2>
     </div> -->
-  </div>
+  </section>
 
-  <div class="neue-faq-sektion">
+  <section class="neue-faq-sektion">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -1703,10 +1703,10 @@
         <span class="icon-play" style="display: none;">▶</span>
       </button>
     </div>
-  </div>
+  </section>
 
   <!-- Neuer Bereich: Ihre Kontaktwege -->
-  <div class="neue-faq-sektion">
+  <section class="neue-faq-sektion">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -1726,7 +1726,7 @@
         <p><span class="kontakt-label">Telefax:</span> +49 (0) 30 9940 2335</p>
       </div>
     </div>
-  </div>
+  </section>
 
   <footer class="main-footer">
     <div class="footer-top-left-content">
