--- a/kontakt.html
+++ b/kontakt.html
@@ -1713,7 +1713,7 @@
     </div>
   </nav>
 
-  <div class="hero-section">
+  <main class="hero-section">
     <div class="hero-background"></div> <!-- Neuer Container für das Hintergrundbild -->
     <div class="hero-text-wrapper">
       <h1>
@@ -1722,9 +1722,9 @@
       </h1>
       <h2>So einfach nehmen Sie mit uns Kontakt auf.</h2>
     </div>
-  </div>
+  </main>
 
-  <div class="info-section">
+  <section class="info-section">
     <div class="left-column">
       <span class="bullet-point">&bull;</span>
       <span class="practice-name">Ihre Nachricht</span>
@@ -1732,10 +1732,10 @@
     <div class="right-column">
       <p class="welcome-text">Ob Rückfrage, Rezeptwunsch oder Terminvereinbarung – wir sind auf verschiedenen Wegen erreichbar. Ganz unkompliziert, ganz nah.</p>
     </div>
-  </div>
+  </section>
 
   <!-- Neuer Bereich: Ihre Kontaktwege (kopiert von faq.html) -->
-  <div class="neue-faq-sektion">
+  <section class="neue-faq-sektion">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -1755,9 +1755,9 @@
         <p><span class="kontakt-label">Telefax:</span> +49 (0) 30 9940 2335</p>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="sprechzeiten-section">
+  <section class="sprechzeiten-section">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -1805,9 +1805,9 @@
     <p class="sprechzeiten-hinweis">
       Bitte beachten Sie die Urlaubszeiten und Feiertage.
     </p>
-  </div>
+  </section>
 
-  <div class="lage-anfahrt-section">
+  <section class="lage-anfahrt-section">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -1842,7 +1842,7 @@
         <div class="right-col">gute Parkmöglichkeiten</div>
       </div>
     </div>
-  </div>
+  </section>
 
   <footer class="main-footer">
     <div class="footer-top-left-content">
