--- a/datenschutzerklärung.html
+++ b/datenschutzerklärung.html
@@ -738,7 +738,7 @@
     </div>
   </nav>
 
-  <div class="content-section"> <!-- Geändert von impressum-section zu content-section für Allgemeingültigkeit -->
+  <main class="content-section"> <!-- Geändert von impressum-section zu content-section für Allgemeingültigkeit -->
     <h1>Datenschutzerklärung</h1>
 
     <h2>1. Einleitung</h2>
@@ -797,7 +797,7 @@
     <p>Wir behalten uns vor, diese Datenschutzerklärung gelegentlich anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht.</p>
     <p>Stand: Juni 2025</p>
 
-  </div>
+  </main>
 
   <footer class="main-footer">
     <div class="footer-top-left-content">
