--- a/impressum.html
+++ b/impressum.html
@@ -725,7 +725,7 @@
     </div>
   </nav>
 
-  <div class="impressum-section">
+  <main class="impressum-section">
     <h1>Impressum</h1>
 
     <p><strong>Angaben gemäß § 5 TMG:</strong></p>
@@ -785,7 +785,7 @@
     </p>
     <!-- Weitere spezifische Hinweise zum Haftungsausschluss und Urheberrecht können hier ergänzt werden -->
 
-  </div>
+  </main>
 
   <footer class="main-footer">
     <div class="footer-top-left-content">
