--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('/assets/startseite.png'); /* Hintergrundbild hierher verschoben */
+      background-image: url('/assets/startseite.webp'); /* Hintergrundbild hierher verschoben */
       background-size: cover;
       background-position: center; /* Standardposition für Desktop */
       z-index: -1; /* Stellt sicher, dass es hinter dem Inhalt liegt */
