--- a/leistungen.html
+++ b/leistungen.html
@@ -198,7 +198,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('/assets/leistungen.png'); /* Hintergrundbild hierher verschoben */
+      background-image: url('/assets/leistungen.webp'); /* Hintergrundbild hierher verschoben */
       background-size: cover;
       background-position: center;
       z-index: -1; /* Stellt sicher, dass es hinter dem Inhalt liegt */
