--- a/faq.html
+++ b/faq.html
@@ -236,7 +236,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('/assets/faq.png'); /* Hintergrundbild hierher verschoben */
+      background-image: url('/assets/faq.webp'); /* Hintergrundbild hierher verschoben */
       background-size: cover;
       background-position: center;
       z-index: -1; /* Stellt sicher, dass es hinter dem Inhalt liegt */
