--- a/kontakt.html
+++ b/kontakt.html
@@ -241,7 +241,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('/assets/kontakt.png'); /* Hintergrundbild hierher verschoben */
+      background-image: url('/assets/kontakt.webp'); /* Hintergrundbild hierher verschoben */
       background-size: cover;
       background-position: center;
       /* Sanfter Übergang für die Skalierung, um Ruckeln zu minimieren */
