--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #000; /* Heller Hintergrund für den Inhalt */
+      background-color: #6e370e; /* Heller Hintergrund für den Inhalt */
       font-smooth: always;
       /* padding-top: 93px; */ /* Entfernt, damit Hero-Section oben beginnt */
     }
